--- a/package.json
+++ b/package.json
@@ -6,21 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.13",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
+    "i18next": "^23.15.1",
+    "next": "14.2.13",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18",
-    "next": "14.2.13"
+    "react-i18next": "^15.0.2",
+    "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "typescript": "^5"
   }
 }
